--- a/frontend/src/containers/NewsfeedItems/NewsfeedPost.css
+++ b/frontend/src/containers/NewsfeedItems/NewsfeedPost.css
@@ -38,6 +38,14 @@
   display:inline;
 }
 
+.optionHover:hover
+{
+
+  background-color: #D3D3D3cc;
+  border-radius: 25px;
+
+}
+
 .LikeCommentHover:hover {
   color: #3399FF;
   text-decoration: underline;
@@ -175,7 +183,7 @@ box-shadow: 0 2px 6px rgba(0, 0, 0, 0.06);
 
   min-height: 70px;
   margin: 0 auto;
-  width:630px;
+  width:640px;
   box-shadow: 0 2px 3px rgba(0, 0, 0, 0.06);
   margin-bottom: 50px;
 }
