--- a/frontend/src/containers/Layouts/SuggestedFriends.css
+++ b/frontend/src/containers/Layouts/SuggestedFriends.css
@@ -9,3 +9,11 @@
 
   cursor: hand;
 }
+
+.scrollableFeature{
+  border: 1px solid #e8e8e8;
+    border-radius: 4px;
+    overflow: auto;
+    padding: 8px 24px;
+    height: 300px;
+}
