--- a/frontend/src/components/labelCSS/ReduxForm.css
+++ b/frontend/src/components/labelCSS/ReduxForm.css
@@ -38,13 +38,13 @@
 }
 
 .reduxContent .box{
-  font-size: 20px;
+  font-size: 15px;
   margin: 0;
-  width: 300px;
+  width: 350px;
 }
 
 .reduxLocation {
-  /* background-color: red; */
+  background-color: red;
   width: 400px;
 }
 
