--- a/frontend/src/components/labelCSS/ReduxForm.css
+++ b/frontend/src/components/labelCSS/ReduxForm.css
@@ -5,7 +5,7 @@
 .reduxTitle {
   /* background-color: red; */
   width: 300px;
-  padding-bottom: 30px;
+  padding-bottom: 15px;
 }
 
 .eventSyncPickerForm{
@@ -20,9 +20,9 @@
   /* background-color: red; */
   border: none;
   border-bottom: 2px solid deepskyblue;
-  font-size: 30px;
+  font-size: 20px;
   height: 40px;
-  width: 300px;
+  width: 350px;
   /* padding-bottom: 100px; */
 }
 
@@ -34,7 +34,8 @@
 .reduxContent{
   /* background-color: red; */
   width: 300px;
-  padding-bottom: 25px;
+  padding-bottom: 10px;
+  margin-left: 30px
 }
 
 .reduxContent .box{
@@ -44,7 +45,7 @@
 }
 
 .reduxLocation {
-  background-color: red;
+  /* background-color: red; */
   width: 400px;
 }
 
@@ -71,6 +72,7 @@
 .reduxDateRange {
   /* background-color: red; */
   width: 300px;
+  margin-top:10px;
   padding-bottom: 10px;
 }
 
@@ -88,6 +90,7 @@
 
 .reduxTimePicker {
   /* background-color: red; */
+  margin-left: 30px;
   width: 300px;
 }
 
