hover so far on personal calendar

--- a/frontend/src/containers/PersonalCalendar/PersonalCalCSS/NewCalendar.css
+++ b/frontend/src/containers/PersonalCalendar/PersonalCalCSS/NewCalendar.css
@@ -312,6 +312,7 @@ main {
 
 .calendar .dayBody .eventsDay{
   /* background-color: lightblue; */
+  width:80%;
   color: white;
   font-size: 15px;
   border-radius: 10px;
