--- a/frontend/src/containers/SocialCalendarFolder/SocialCalCSS/SocialCal.css
+++ b/frontend/src/containers/SocialCalendarFolder/SocialCalCSS/SocialCal.css
@@ -383,6 +383,28 @@
   top: 2px;
   transform: translateX(-50%);
 }
+
+.alreadyViewButtonCoverPass{
+  background-color: gainsboro;
+  border: 1px solid gainsboro;
+  border-radius: 5px;
+  cursor: pointer;
+  color: white;
+  font-size: 15px;
+  width: 60px;
+  height: 30px;
+  position: absolute;
+  left: 150px;
+  top: 30%;
+}
+.alreadyViewButtonCoverPass .viewText{
+  position: relative;
+  left: 20%;
+  top: 2px;
+  transform: translateX(-50%);
+}
+
+
 .alreadyJoinButtonCover .leaveText{
   position: relative;
   left: 14%;
