got the boxes right

--- a/frontend/src/containers/PersonalCalendar/PersonalCalCSS/NewCalendar.css
+++ b/frontend/src/containers/PersonalCalendar/PersonalCalCSS/NewCalendar.css
@@ -956,7 +956,20 @@ main {
 
 
 /* This is for the week view and to control the cell size */
-.calendar .scrollBody .backWeekBody .hourcell {
+.calendar .scrollBody .backWeekBody .hourcellT {
+  position: relative;
+  height: 25px;
+  border-left: 1px solid var(--border-color);
+  /* border-bottom: 1px solid var(--border-color); */
+  overflow: hidden;
+  cursor: pointer;
+  background: var(--neutral-color);
+  /* background: red; */
+  transition: 0.25s ease-out;
+  z-index: 1;
+}
+
+.calendar .scrollBody .backWeekBody .hourcellB {
   position: relative;
   height: 25px;
   border-left: 1px solid var(--border-color);
