--- a/frontend/src/containers/PersonalCalendar/PersonalCalCSS/NewCalendar.css
+++ b/frontend/src/containers/PersonalCalendar/PersonalCalCSS/NewCalendar.css
@@ -1009,12 +1009,14 @@ main {
 /* This is for the day view */
 .calendar .backDayBody .daycell {
   position: relative;
-  height: 50px;
+  /* background-color: red; */
+  height: 25px;
   border-top: 1px solid var(--border-color);
   border-right: 1px solid var(--border-color);
   overflow: hidden;
   cursor: pointer;
   background: var(--neutral-color);
+  /* background-color: red; */
   transition: 0.25s ease-out;
   z-index: 1;
 }
