30 min intervals with button click done for day cal

--- a/frontend/src/containers/PersonalCalendar/PersonalCalCSS/NewCalendar.css
+++ b/frontend/src/containers/PersonalCalendar/PersonalCalCSS/NewCalendar.css
@@ -1007,12 +1007,26 @@ main {
 }
 
 /* This is for the day view */
-.calendar .backDayBody .daycell {
+.calendar .backDayBody .dayCellT {
   position: relative;
   /* background-color: red; */
   height: 25px;
   border-top: 1px solid var(--border-color);
-  border-right: 1px solid var(--border-color);
+  border-left: 1px solid var(--border-color);
+  overflow: hidden;
+  cursor: pointer;
+  background: var(--neutral-color);
+  /* background-color: red; */
+  transition: 0.25s ease-out;
+  z-index: 1;
+}
+
+.calendar .backDayBody .dayCellB {
+  position: relative;
+  /* background-color: red; */
+  height: 25px;
+  /* border-top: 1px solid var(--border-color); */
+  border-left: 1px solid var(--border-color);
   overflow: hidden;
   cursor: pointer;
   background: var(--neutral-color);
