--- a/frontend/src/containers/PersonalCalendar/PersonalCalCSS/NewCalendar.css
+++ b/frontend/src/containers/PersonalCalendar/PersonalCalCSS/NewCalendar.css
@@ -624,6 +624,10 @@ main {
   /* background-color: red; */
 }
 
+.weekEvent .pointerEvent{
+    pointer-events: none;
+}
+
 .scrollBody .testContainer {
   height: 0px;
 }
@@ -1008,30 +1012,14 @@ main {
 }
 
 /* This is for the day view */
-.calendar .backDayBody .dayCellT {
+.calendar .backDayBody .daycell {
   position: relative;
-  /* background-color: red; */
-  height: 25px;
+  height: 50px;
   border-top: 1px solid var(--border-color);
-  border-left: 1px solid var(--border-color);
+  border-right: 1px solid var(--border-color);
   overflow: hidden;
   cursor: pointer;
   background: var(--neutral-color);
-  /* background-color: red; */
-  transition: 0.25s ease-out;
-  z-index: 1;
-}
-
-.calendar .backDayBody .dayCellB {
-  position: relative;
-  /* background-color: red; */
-  height: 25px;
-  /* border-top: 1px solid var(--border-color); */
-  border-left: 1px solid var(--border-color);
-  overflow: hidden;
-  cursor: pointer;
-  background: var(--neutral-color);
-  /* background-color: red; */
   transition: 0.25s ease-out;
   z-index: 1;
 }
