--- a/frontend/src/containers/PersonalCalendar/PersonalCalCSS/NewCalendar.css
+++ b/frontend/src/containers/PersonalCalendar/PersonalCalCSS/NewCalendar.css
@@ -98,7 +98,7 @@ main {
 /* Container that holds Calendar */
 .calendarContainer{
   position: relative;
-  left: 63px;
+  left: 6%;
   width: 1830px;
   height: 920px;
   bottom: 30px;
@@ -656,7 +656,7 @@ main {
   top: 7px;
   left: 0px;
   width: 0px;
-  background-color: red;
+  /* background-color: red; */
 }
 
 .miniflex-container .miniSidecol .minisideBar .miniholder .minitabs{
@@ -671,8 +671,7 @@ main {
 .miniCalContainer {
   position:relative;
   left: 0px;
-  top: 20px;
-  width: 1000px;
+  width: 700px;
   /* height: 10px; */
   /* background-color: red; */
 }
@@ -682,22 +681,23 @@ main {
   /* background-color: red; */
   /* width: 1000px; */
   /* height: 100px; */
+  color:black;
   position: relative;
   top: 80px;
   /* height: 300px; */
-  left: 25px;
-  width: 450px;
+  left: 80px;
+  width: 300px;
   /* color: white; */
 }
 
 .miniCalContainer .addEventButton {
   border: none;
-  color: deepskyblue;
+  color: white;
   /* background-image: linear-gradient(to bottom right, #43cea2 , #185a9d); */
   box-shadow: 0 7px 6px rgba(0, 0, 0, 0.12), 0 1px 4px rgba(0, 0, 0, 0.24);
   position: relative;
-  left: 110px;
-  width: 150px;
+
+  width: 250px;
   top: 40px;
   height: 50px;
   font-size: 20px;
@@ -714,7 +714,8 @@ main {
 .miniCalContainer .timeLayerCon .yearButton {
   background-color: #89ABE3FF;
   border: none;
-  width: 150px;
+  left:20px;
+  width: 120px;
   height: 40px;
   box-shadow: 0 7px 6px rgba(0, 0, 0, 0.12), 0 1px 4px rgba(0, 0, 0, 0.24);
 
@@ -723,9 +724,9 @@ main {
 .miniCalContainer .timeLayerCon .monthButton {
   background-color: #FFD662FF;
   position: relative;
-  left: 15px;
+  left: 35px;
   border: none;
-  width: 150px;
+  width: 120px;
   height: 40px;
   box-shadow: 0 7px 6px rgba(0, 0, 0, 0.12), 0 1px 4px rgba(0, 0, 0, 0.24);
 
@@ -746,8 +747,9 @@ main {
   /* background-color: red; */
   position: relative;
   top: 80px;
-  left: 40px;
-  width: 300px;
+  left:80px;
+  width: 250px;
+  margin-bottom: 50px;
   box-shadow: 0 7px 6px rgba(0, 0, 0, 0.12), 0 1px 4px rgba(0, 0, 0, 0.24);
 
 }
@@ -839,7 +841,7 @@ main {
 
 .miniCalContainer .miniCalendar .body .miniCell{
   position: relative;
-  height: 50px;
+  height: 40px;
   width: 5em;
   /* border-right: 1px solid var(--border-color); */
   overflow: hidden;
@@ -854,14 +856,16 @@ main {
   line-height: 15px;
 }
 
+/* // entire right side container */
 .calendarContainer .miniCalContainer{
   flex-grow: 0;
   flex-shrink: 0;
+  /* background-color:red; */
   /* flex-basis: 100%; */
   position: relative;
-  left: -30px;
+  left:-125px;
   /* right: 200px; */
-  width: 400px;
+  width: 300px;
   /* top: 110px; */
   /* background-color:#696969; */
   /* background-color:#000080; */
