week calendar right view

--- a/frontend/src/containers/PersonalCalendar/PersonalCalCSS/NewCalendar.css
+++ b/frontend/src/containers/PersonalCalendar/PersonalCalCSS/NewCalendar.css
@@ -670,8 +670,8 @@ main {
 
 .miniCalContainer {
   position:relative;
-  left: 0px;
-  width: 700px;
+  margin-right: 25px;
+
   /* height: 10px; */
   /* background-color: red; */
 }
@@ -860,12 +860,12 @@ main {
 .calendarContainer .miniCalContainer{
   flex-grow: 0;
   flex-shrink: 0;
-  /* background-color:red; */
+  background-color:#e6f7ff;
   /* flex-basis: 100%; */
   position: relative;
-  left:-125px;
+  left:-75px;
   /* right: 200px; */
-  width: 300px;
+  width: 350px;
   /* top: 110px; */
   /* background-color:#696969; */
   /* background-color:#000080; */
