--- a/frontend/src/containers/PersonalCalendar/PersonalCalCSS/ReduxForm.css
+++ b/frontend/src/containers/PersonalCalendar/PersonalCalCSS/ReduxForm.css
@@ -82,7 +82,8 @@
 }
 
 .reduxDateRange .datePicker {
-  border: 1px solid red;
+  /* border: 1px solid red; */
+  background-color: rgba(255, 0, 0, 0.3);
   border-radius: 5px;
 
 }
