--- a/frontend/src/containers/PersonalCalendar/PersonalCalCSS/ReactForm.css
+++ b/frontend/src/containers/PersonalCalendar/PersonalCalCSS/ReactForm.css
@@ -2,7 +2,7 @@
   /* outline: none; */
   border: none;
   border-bottom: 2px solid deepskyblue;
-  font-size: 30px;
+  font-size: 25px;
   height: 40px;
 }
 
@@ -15,6 +15,7 @@
 
 .reactForm .reactContent{
   font-size: 20px;
+
   margin: 0;
 }
 
@@ -23,6 +24,7 @@
   left: 310px;
   top: 53px;
   width: 50px;
+  background-color: red;
 }
 
 .reactForm .reactLocation{
