apply the accept look to the day calendar

--- a/frontend/src/containers/PersonalCalendar/PersonalCalCSS/NewCalendar.css
+++ b/frontend/src/containers/PersonalCalendar/PersonalCalCSS/NewCalendar.css
@@ -355,6 +355,18 @@ main {
   z-index: 1;
 }
 
+.calendar .dayBody .eventsDayAccept{
+  /* background-color: red; */
+  width:80%;
+  color: white;
+  font-size: 15px;
+  border-radius: 10px;
+  padding-left: 10px;
+  /* box-shadow: 0 7px 6px rgba(0, 0, 0, 0.12), 0 1px 4px rgba(0, 0, 0, 0.24); */
+  /* grid-column: 1/7; */
+  z-index: 1;
+}
+
 .calendar .dayBody .eventsDay:hover{
   background-color: lightgrey;
   transition: .25 ease-out;
