--- a/frontend/src/containers/PersonalCalendar/PersonalCalCSS/NewCalendar.css
+++ b/frontend/src/containers/PersonalCalendar/PersonalCalCSS/NewCalendar.css
@@ -603,6 +603,17 @@ main {
   z-index: 1;
 }
 
+.calendar .body .row .monthEventAccept {
+  /* background-color: lightblue; */
+  color: white;
+  font-size: 15px;
+  border-radius: 10px;
+  padding-left: 10px;
+  /* box-shadow: 0 7px 6px rgba(0, 0, 0, 0.12), 0 1px 4px rgba(0, 0, 0, 0.24); */
+  /* grid-column: 1/7; */
+  z-index: 1;
+}
+
 .calendar .body .row .monthEvent:hover {
   /* background-color: lightgrey; */
   /* transition: .25 ease-out; */
@@ -619,7 +630,7 @@ main {
   /* border-radius: 10px; */
   padding-left: 10px;
   box-shadow: 0 5px 6px rgba(0, 0, 0, 0.12), 2px 3px 4px rgba(0, 0, 0, 0.24);
-  width:95%;
+  width:100%;
   /* grid-column: 1/7; */
   z-index: 1;
 }
@@ -632,7 +643,7 @@ main {
   /* border-radius: 10px; */
   padding-left: 10px;
   /* box-shadow: 0 7px 6px rgba(0, 0, 0, 0.12), 0 1px 4px rgba(0, 0, 0, 0.24); */
-  width:95%;
+  width:100%;
   /* grid-column: 1/7; */
   z-index: 1;
 }
