--- a/frontend/src/containers/PersonalCalendar/PersonalCalCSS/NewCalendar.css
+++ b/frontend/src/containers/PersonalCalendar/PersonalCalCSS/NewCalendar.css
@@ -631,7 +631,7 @@ main {
 
   box-shadow: 0 5px 6px rgba(0, 0, 0, 0.12), 2px 3px 4px rgba(0, 0, 0, 0.24);
   width:95%;
-  
+  height: 95%;
   /* grid-column: 1/7; */
   z-index: 1;
 }
@@ -644,7 +644,8 @@ main {
   /* border-radius: 10px; */
   padding-left: 10px;
   /* box-shadow: 0 7px 6px rgba(0, 0, 0, 0.12), 0 1px 4px rgba(0, 0, 0, 0.24); */
-  width:97%;
+  width:95%;
+  height: 95%;
   /* grid-column: 1/7; */
   z-index: 1;
 }
