--- a/frontend/src/containers/PersonalCalendar/PersonalCalCSS/NewCalendar.css
+++ b/frontend/src/containers/PersonalCalendar/PersonalCalCSS/NewCalendar.css
@@ -1,6 +1,6 @@
 .outerContainerPeople{
-  height:100px;
-  margin-bottom: 15px;
+
+  /* margin-bottom: 15px; */
   /* background-color: red; */
 }
 
