--- a/frontend/src/containers/PersonalCalendar/PersonalCalCSS/ReduxForm.css
+++ b/frontend/src/containers/PersonalCalendar/PersonalCalCSS/ReduxForm.css
@@ -4,7 +4,7 @@
 
 .reduxTitle {
   /* background-color: red; */
-  width: 300px;
+  width: 500px;
   padding-bottom: 15px;
 }
 
@@ -46,7 +46,7 @@
 }
 
 .reduxLocation {
-  /* background-color: red; */
+  background-color: red;
   width: 400px;
 }
 
@@ -90,15 +90,6 @@
 }
 
 
-.reduxTimePicker {
-  /* background-color: red; */
-  margin-left: 30px;
-  width: 300px;
-}
-
-.reduxTimePicker .timebox{
-  width: 110px;
-}
 
 .reduxButton {
   /* background-color:red; */
