--- a/frontend/src/containers/PersonalCalendar/PersonalCalCSS/NewCalendar.css
+++ b/frontend/src/containers/PersonalCalendar/PersonalCalCSS/NewCalendar.css
@@ -125,9 +125,9 @@ main {
 /* Container that holds Calendar */
 .calendarContainer{
   position: relative;
-  left: 6%;
-  width: 1830px;
-  height: 920px;
+  left: 4%;
+  width: 100%;
+  height: 100%;
   bottom: 30px;
   background-color: white;
   display: flex;
@@ -163,6 +163,7 @@ main {
 .weekDayFlex-Container{
   display: flex;
   overflow: auto;
+  /* background-color: red; */
   /* overflow-y: hidden; */
   width: 1370px;
   height: 780px;
@@ -205,6 +206,7 @@ main {
 
 .weekcolcell{
   float: center;
+  /* background-color: red; */
 
 }
 
@@ -553,6 +555,7 @@ main {
   /* width: 700px; */
 }
 
+/* monday - sunday  */
 .weekCalendar .weekDays {
   font-weight: 100;
   color: ;
@@ -854,7 +857,7 @@ main {
   background-image: linear-gradient(to bottom right, #43cea2 , #185a9d);
   box-shadow: 0 7px 6px rgba(0, 0, 0, 0.12), 0 1px 4px rgba(0, 0, 0, 0.24);
   position: relative;
-  left: 110px;
+
   width: 150px;
   top: 40px;
   height: 50px;
@@ -957,7 +960,7 @@ main {
   background-color:#e6f7ff;
   /* flex-basis: 100%; */
   position: relative;
-  left:-75px;
+  left:-35px;
   /* right: 200px; */
   width: 350px;
   /* top: 110px; */
