--- a/frontend/src/containers/PersonalCalendar/PersonalCalCSS/NewCalendar.css
+++ b/frontend/src/containers/PersonalCalendar/PersonalCalCSS/NewCalendar.css
@@ -141,7 +141,7 @@ main {
 .weekCalContainer {
   position: relative;
   right: 180px;
-  width: 1595px;
+  width: 1695px;
   /* height: 1000px; */
   bottom: 100px;
   /* background-color: yellow; */
@@ -169,9 +169,10 @@ main {
 .weekDayFlex-Container{
   display: flex;
   overflow: auto;
-  background-color: red;
+  /* background-color: red; */
   /* overflow-y: hidden; */
-  width: 1570px;
+  margin-left: 70px;
+  width: 1470px;
   height: 780px;
   border-top: 2px solid;
   border-color: darkgrey;
@@ -481,6 +482,9 @@ main {
   font-size: 21px;
   padding: 1em 0;
   /* border-bottom: 1px solid var(--border-color); */
+  margin-left: 400px;
+  /* to the right of this is day/week dropdown */
+
   /* background-color: blue; */
   width: 580px;
 }
@@ -570,7 +574,8 @@ main {
   /* border-top: 1px solid var(--border-color); */
   /* border-bottom: 1px solid var(--border-color); */
   /* border-right: 1px solid var(--border-color); */
-  width: 1510px;
+  width: 1400px;
+
   /* background-color: red; */
 }
 
@@ -760,7 +765,7 @@ main {
 
 .miniCalContainer {
   position:relative;
-  margin-right: 25px;
+
 
   /* height: 10px; */
   /* background-color: red; */
@@ -1229,7 +1234,7 @@ to make it adjustable */
   display: grid;
   border-bottom: 1px solid var(--border-color);
   /* grid-auto-flow: dense; */
-  grid-template-columns: repeat(7, 186px);
+  grid-template-columns: repeat(7, 195px);
   grid-template-rows: repeat(48, 22.1px);
   /* background-color: red; */
   grid-column-gap: 1px;
@@ -1398,7 +1403,7 @@ to make it adjustable */
   /* display: flex;
   flex-direction: column;
   flex-wrap: wrap; */
-  width: 1505px;
+  width: 1355px;
   /* background-color: blue; */
 
 }
