--- a/frontend/src/containers/PersonalCalendar/PersonalCalCSS/NewCalendar.css
+++ b/frontend/src/containers/PersonalCalendar/PersonalCalCSS/NewCalendar.css
@@ -129,11 +129,11 @@ main {
 
 /* Container that holds Calendar */
 .calendarContainer{
-  position: relative;
+  position: absolute;
   left: 4%;
   width: 100%;
-  height: 100%;
-  bottom: 30px;
+  height: 94%;
+  bottom: 0px;
   background-color: white;
   display: flex;
 }
@@ -450,6 +450,7 @@ main {
   display: block;
   position: relative;
   width: 100%;
+  height: 154%;
   /* background-color: red; */
   background: var(--neutral-color);
   /* border: 1px solid var(--border-color); */
@@ -460,7 +461,7 @@ main {
   position: relative;
   left: 50px;
   width: 1310px;
-  background: var(--neutral-color);
+  /* background: var(--neutral-color); */
   /* border: 1px solid var(--border-color); */
   /* background-color: black; */
 }
