--- a/frontend/src/containers/PersonalCalendar/EventPage/EventPage.css
+++ b/frontend/src/containers/PersonalCalendar/EventPage/EventPage.css
@@ -1,6 +1,6 @@
 /* CSS for the whole container */
 .eventPageContainer{
-  background-color: red;
+  /* background-color: red; */
   display: flex;
   width: 1700px;
   height: 90%;
@@ -26,6 +26,7 @@
 .eventGroupChatContainer .messageList{
   width: 100%;
   height: 90%;
+  background-color: red;
 }
 
 .eventGroupChatContainer .inputForm{
