--- a/frontend/src/containers/PersonalCalendar/EventPage/EventPage.css
+++ b/frontend/src/containers/PersonalCalendar/EventPage/EventPage.css
@@ -26,7 +26,7 @@
 .eventGroupChatContainer .messageList{
   width: 100%;
   height: 90%;
-  background-color: red;
+  background-color: white;
 }
 
 .eventGroupChatContainer .inputForm{
